--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,20 +1,22 @@
 name: Go
 on: [push]
 jobs:
-
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version: ["1.12.x", "1.13.x", "1.21.x"]
+
     steps:
+      - name: Set up Go ${{ matrix.go-version }}
+        uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4
+        with:
+          go-version: ${{ matrix.go-version }}
+        id: go
 
-    - name: Set up Go 1.12
-      uses: actions/setup-go@93397bea11091df50f3d7e59dc26a7711a8bcfbe # v4
-      with:
-        go-version: 1.12
-      id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
-
-    - name: Test
-      run: go test -v .
+      - name: Test
+        run: go test -v .
