--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.11.x", "1.12.x", "1.13.x", "1.20.x", "1.21.x"]
+        go-version: ["1.11.x", "1.12.x", "1.13.x", "1.17.x", "1.20.x", "1.21.x"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
